<resources>
    <string name="app_name">M.M. Engineer Co</string>
    <string name="app_tagline">Fire Prevention is Our Intention</string>
    <string name="Fire_Hose">Fire Hoses</string>
    <string name="Fire_Pump">Fire Pumps</string>
    <string name="Sprinkler_System">Sprinklers System</string>
    <string name="Valves">Valves</string>
    <string name="FireSafetyCabinets">Cabinets</string>
    <string name="Hose_Reels">Hose Reel</string>
    <string name="Nozzles">Nozzles</string>
    <string name="Monitors">Monitors</string>
    <string name="DryRiserequipments">Dry Riser Hydrants</string>
    <string name="title_activity_navigation__drawer_homescreen">Navigation_Drawer_homescreen
    </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="product_name">Product Name</string>
    <string name="search_title">Search Title</string>
</resources>